everything correctly aligned and contain. need to comb through classes to make sure things are named well

--- a/src/App.css
+++ b/src/App.css
@@ -10,18 +10,16 @@ html, body{
 /* NewsFeedMain Styles */
 
 .newsFeedImageContainer{
-  border: 1px solid black;
+  border-top: 4px solid black;
 }
 
 .removeLinkLine{
   text-decoration: none;
   color: black;
   font-size: 1.7rem;
-
 }
 .newsFeedImage{
   width: 100%;
-  height: 5%;
   display: block;
 }
 
@@ -30,20 +28,25 @@ html, body{
   padding-left: 5%;
   text-decoration: none;
   font-family: “Helvetica Neue”,Helvetica,Arial,sans-serif;
+  font-weight: bold;
 
 }
 
 .subHeaderMain{
   padding-left: 5%;
   font-family: “UnitedSansCdHv”, franklin-gothic-urw !important;
-  font-size: 1.8rem;
+  font-size: 2.2rem;
   margin-bottom: 2%;
+  font-weight: bold;
+  margin-top: 20px;
+
+
 }
 
 .newsFeedMainContent{
   padding-left: 5%;
   font-family: “Helvetica Neue”,Helvetica,Arial,sans-serif;
-  padding-right: 30%;
+  padding-right: 24%;
   font-size: 1.7rem;
 }
 
@@ -52,8 +55,8 @@ html, body{
   color: black;
   background-color: #FFFFFF;
   float: left;
-  width: 67%;
-  border: 1px solid black;
+  width: 69%;
+  border: 4px solid black;
   /* outline: 2px solid black; */
 
   /* padding-top: 0px; */
@@ -63,11 +66,16 @@ html, body{
 }
 
 .headerUnderline{
-  border-bottom: 1px solid black;
+  border-bottom: 4px solid black;
   padding-bottom: 20px;
   padding-left: 5%;
-  font-size: 2.2rem;
+  font-size: 2.5rem;
   font-family: “UnitedSansCdHv”, franklin-gothic-urw !important;
+  font-weight: bold;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-top: 0%;
+
 }
 
 /* NewsFeedSidebarStyles below */
@@ -75,6 +83,11 @@ html, body{
 .newsFeedSideBarHeader{
   text-align: center;
   color: black;
+  font-family: “UnitedSansCdHv”, franklin-gothic-urw !important;
+  margin-bottom: 1px;
+  margin-top: 1px;
+
+
 }
 
 .newsFeedSidebarContent{
@@ -89,25 +102,30 @@ html, body{
 
 .newsFeedSidebarImage{
   width: 100%;
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
+  /* border-top: 4px solid black; */
+  border-bottom: 4px solid black;
   display: block;
 
 
 }
 
-.test2{
-  color: blue;
-  width: 30%;
-  float: right;
+.individualSideBarArticle{
+
   padding-top: 5px;
-  border: 1px solid black;
-  margin-top: 50px;
+  border: 4px solid black;
   background-color: #FFFFFF;
+  margin-bottom: 20px;
+}
+
+.newsFeedSidebarContainer{
+  width: 28%;
+  float: right;
+  margin-top: 50px;
+
 }
 
 .Container{
-  border: 1px solid black;
+  border: 2px solid black;
 
   margin-left: 10%;
   margin-right: 10%;
